--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,59 @@
 html,
 body,
 #root {
-  background-color: rgb(0, 44, 95);
+  background-color: #002c5f;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  height: 100vh;
+  scroll-behavior: smooth;
+}
+
+.canvas-wrapper {
+  height: 95vh;
+}
+
+@media (max-width: 1024px) {
+  .canvas-wrapper {
+    height: 80vh;
+    margin-top: 4rem;
+  }
+  html,
+  body,
+  #root {
+    background-color: #002c5f;
+    margin: 0;
+    padding: 0;
+    height: auto;
+  }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: inherit;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+li {
+  display: list-item;
+  list-style-position: inside;
+  margin-top: 20px;
+  margin-left: 20px;
 }
